The basic design seems good. 1. Cropped Fading Red Claw, as it didn't look vertically centered. 2. Replaced some of the existing fractals. 3. Centered top and bottom vignette paragraphs. 4. Added the credits, but the links need fixing. 5. I didn't reposition the Skeletal Lightning fractal yet.

--- a/css/last-redoubt-red.scss
+++ b/css/last-redoubt-red.scss
@@ -166,6 +166,10 @@ main p a {
     color: $phosphor-green;
 }
 
+p.centered {
+    text-align: center;
+}
+
 main h3 {
     font-size: xx-large;
 }
